JEP 445: Unnamed Classes and Instance Main Methods (Preview) is available in OpenJDK JDK 21 Early-Access Build #26